# what2eat

./: main.py  pyproject.toml
src/: lifespan.py  main.py
src/core/: base_model.py  config.py  database.py  exception.py
src/dishes/: model.py  repository.py  router.py  schema.py  service.py
